Issue IKTRE-90 by tuj: Added display none for not visible slides

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@ body {
 
 .slide.ng-hide {
   opacity:0;
+  display: none;
 }
 
 .slide-block {
@@ -35,6 +36,7 @@ body {
 
 .slide-block.ng-hide {
   opacity: 0;
+  display: none;
 }
 
 .progress-box {
